2008-10-07  Jens Granseuer  <jensgr@gmx.net>

	* data/appearance.glade: revert r9025 and reinstate the help buttons

2008-09-29  Jens Granseuer  <jensgr@gmx.net>

	* data/appearance.glade: really remove the non-working help button
	(bug #473181)

==================== 2.24.0.1 ====================

2008-09-24  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (conv_to_widget_cb), (prepare_list): make sure
	the GConf to widget conversion funtion has all the data it needs
	when it is called for the first time. Fixes a possible crash when
	starting the capplet (bug #553541)

2008-09-21  Jens Granseuer  <jensgr@gmx.net>

	* data/appearance.glade: set GtkAdjustment page size to 0 to avoid
	problems due to newly enforced value boundaries in GTK+ 2.14.  See
	bug #551740 for a description of the problem.

2008-09-18  Jens Granseuer  <jensgr@gmx.net>

	* theme-save.c: (write_theme_to_disk): don't fail if the destination
	files already exist and the user tries to overwrite them (bug #552671)

2008-08-22  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (conv_to_widget_cb), (create_thumbnail),
	(prepare_list): when a hidden theme is selected, and therefore
	becomes visible, create a thumbnail for it (bug #547301)

2008-08-14  Jens Granseuer  <jensgr@gmx.net>

	* data/appearance.glade: remove help button as long as we don't have
	any help to show (bug #473181)

2008-08-12  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (conv_to_widget_cb), (prepare_list): when
	adding an unknown theme to the list because it has been selected use
	the corresponding default icon to represent it

2008-07-29  Jens Granseuer  <jensgr@gmx.net>

	* appearance-main.c: (main):
	* appearance-themes.c: (theme_drag_data_received_cb):
	* theme-installer.c: (gnome_theme_install),
	(gnome_theme_installer_run):
	* theme-installer.h: make theme installation from GIO-supported
	sources work (including drag and drop) (bug #545335)

2008-07-29  Jens Granseuer  <jensgr@gmx.net>
