@@ -26,6 +26,7 @@
 #include "gtkrc-utils.h"
 #include "gconf-property-editor.h"
 #include "theme-thumbnail.h"
+#include "capplet-util.h"
 #include "gedit-message-area.h"
 
 typedef void (* ThumbnailGenFunc) (void               *type,
@@ -392,7 +393,7 @@ static void
 style_response_cb (GtkDialog *dialog, gint response_id)
 {
   if (response_id == GTK_RESPONSE_HELP) {
-    /* FIXME: help */
+    capplet_help (GTK_WINDOW (dialog), "user-guide.xml", "goscustdesk-61");
   } else {
     gtk_widget_hide (GTK_WIDGET (dialog));
   }
