@@ -1,5 +1,13 @@
 2008-10-07  Jens Granseuer  <jensgr@gmx.net>
 
+	Patch by: Matthias Clasen <mclasen@redhat.com>
+
+	* appearance-main.c: (main_window_response):
+	* appearance-style.c: (style_response_cb): connect the help buttons
+	to the most appropriate sections in the user guide (bug #554957)
+
+2008-10-07  Jens Granseuer  <jensgr@gmx.net>
+
 	* data/appearance.glade: revert r9025 and reinstate the help buttons
 
 2008-09-29  Jens Granseuer  <jensgr@gmx.net>
